--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ defaults:
     values:
       image: true
 
-title: dengqiqi的世界
-name: dengqiqi
-description: 每一天的努力，是为了遇见明天更好的自己。
+title: Smurfs的村庄
+name: Smurfs
+description: There is a place.\n A place that knows no sadness.\n Where even feeling blue is a happy thing.
 
 url: https://dengqiqi.github.io
 
