--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ defaults:
 
 title: Smurfs的村庄
 name: Smurfs
-description: There is a place.\n A place that knows no sadness.\n Where even feeling blue is a happy thing.
+description: There is a place.<br/> A place that knows no sadness.<br/> Where even feeling blue is a happy thing.
 
 url: https://dengqiqi.github.io
 
